# airsentinel

./: .gitignore  AirSentinel_MasterDoc.pptx  AirSentinel_MasterDoc_v2.pptx  PROJECT_STATUS.md  README.md
forecasting/: README.md  SESSION_SUMMARY.md  pyproject.toml  requirements.txt
forecasting/data/processed/: airsentinel_daily_panel.csv
forecasting/data/raw/: Anand_Vihar__CO__20260606_20260721.csv  Anand_Vihar__NO2__20260606_20260721.csv  Anand_Vihar__O3__20260606_20260721.csv  Anand_Vihar__PM10__20260606_20260721.csv  Anand_Vihar__PM25__20260606_20260721.csv  Anand_Vihar__SO2__20260606_20260721.csv  Anand_Vihar__humidity__20260606_20260721.csv  Anand_Vihar__temp__20260606_20260721.csv  Anand_Vihar__wind_speed__20260606_20260721.csv  Ashok_Vihar__CO__20260606_20260721.csv  Ashok_Vihar__NO2__20260606_20260721.csv  Ashok_Vihar__O3__20260606_20260721.csv  Ashok_Vihar__PM10__20260606_20260721.csv  Ashok_Vihar__PM25__20260606_20260721.csv  Ashok_Vihar__SO2__20260606_20260721.csv  Ashok_Vihar__humidity__20260606_20260721.csv  Ashok_Vihar__temp__20260606_20260721.csv  Ashok_Vihar__wind_speed__20260606_20260721.csv  Bawana__CO__20260606_20260721.csv  Bawana__NO2__20260606_20260721.csv  Bawana__O3__20260606_20260721.csv  Bawana__PM10__20260606_20260721.csv  Bawana__PM25__20260606_20260721.csv  Bawana__SO2__20260606_20260721.csv  Bawana__humidity__20260606_20260721.csv  Bawana__temp__20260606_20260721.csv  Bawana__wind_speed__20260606_20260721.csv  Dwarka__CO__20260606_20260721.csv  Dwarka__NO2__20260606_20260721.csv  (+88 more)
forecasting/outputs/: forecasts.csv  metrics.json
(+48 files in other folders)
