[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "airsentinel"
version = "0.1.0"
description = "AirSentinel forecasting & CAAQMS data pipeline (Person 1 track)"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "pandas>=2.1",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
    "python-dateutil>=2.9",
]

[tool.setuptools.packages.find]
where = ["src"]

# Installed in editable mode (`pip install -e .`) by sibling modules — e.g. vehicle_emissions
# imports `airsentinel.stations.ZONES` directly rather than re-typing the 13 hotspot zone
# names a second time, so the two modules structurally cannot drift out of sync.
